Changed filepaths for images

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MyPage</title>
   <link href="./style/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
-  <link rel="shortcut icon" href="./images/icons/icons8-Torii Filled-100.png"/>
+  <link rel="shortcut icon" href="images/icons/icons8-Torii Filled-100.png"/>
 
 </head>
 
@@ -23,12 +23,12 @@
 
 
   <section id="section1">
-    <img id="section1_img1" src="./images/girl_1.png">
+    <img id="section1_img1" src="images/girl_1.png">
     <div id="section1_box">
       <p id="section1_box_p1">Witaj na mojej stronie!</p>
       <p id="section1_box_p2">Mam na imię Weronika. </br>Mam 20 lat. Uczę się tworzyć strony internetowe. To moja pierwsza strona, stworzona na CoderDojo. Możesz mnie dzięki niej lepiej poznać i zobaczyć progres moich umiejętności w HTML5 i CSS3.</p>
     </div>
-    <img id="section1_img2" src="./images/3D_pionowe_przezroczyste_square.png">
+    <img id="section1_img2" src="images/3D_pionowe_przezroczyste_square.png">
   </section>
 
 
@@ -41,8 +41,8 @@
     <table>
       <tr>
         <td class="cell_type3">Cupcake ipsum dolor sit amet jelly beans fruitcake chocolate tart. Croissant tart tiramisu tiramisu tiramisu liquorice sugar plum. Sweet wafer sugar plum cookie liquorice ice cream halvah oat cake jelly beans.</td>
-        <td class="cell_type1"><img src="./images/icons/icons8-Rice Bowl-96.png"></td>
-        <td class="cell_type1"><img src="./images/icons/icons8-Sashimi-96.png"></td>
+        <td class="cell_type1"><img src="images/icons/icons8-Rice Bowl-96.png"></td>
+        <td class="cell_type1"><img src="images/icons/icons8-Sashimi-96.png"></td>
         <td class="cell_type3">Cupcake ipsum dolor sit amet jelly beans fruitcake chocolate tart. Croissant tart tiramisu tiramisu tiramisu liquorice sugar plum. Sweet wafer sugar plum cookie liquorice ice cream halvah oat cake jelly beans.</td>
       </tr>
 
@@ -56,8 +56,8 @@
 
       <tr>
         <td class="cell_type3">Cupcake ipsum dolor sit amet jelly beans fruitcake chocolate tart. Croissant tart tiramisu tiramisu tiramisu liquorice sugar plum. Sweet wafer sugar plum cookie liquorice ice cream halvah oat cake jelly beans.</td>
-        <td class="cell_type1"><img src="./images/icons/icons8-Sushi-80.png"></td>
-        <td class="cell_type1"><img src="./images/icons/icons8-Bento-96.png"></td>
+        <td class="cell_type1"><img src="images/icons/icons8-Sushi-80.png"></td>
+        <td class="cell_type1"><img src="images/icons/icons8-Bento-96.png"></td>
         <td class="cell_type3">Cupcake ipsum dolor sit amet jelly beans fruitcake chocolate tart. Croissant tart tiramisu tiramisu tiramisu liquorice sugar plum. Sweet wafer sugar plum cookie liquorice ice cream halvah oat cake jelly beans.</td>
       </tr>
 
