Changed html head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>MyPage</title>
-  <link href="./style/style.css" rel="stylesheet">
+  <link href="style/style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
   <link rel="shortcut icon" href="images/icons/icons8-Torii Filled-100.png"/>
 
